Adding a glosssaries page, and linking terms to it's respective glossary definition

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,7 @@
 <% content_for :head do %>
   <title>Open Data for Development - About</title>
 <% end %>
-
-  <section class="main" resource="#about" typeof="schema:Article" role="main">
+  <article class="main" resource="#about" typeof="schema:Article" role="main">
     <h1 property="schema:headline">About the Project</h1>
     <meta property="schema:datePublished" content="2014-06-20"/>
     <meta property="schema:inLanguage" content="en-US"/>
@@ -90,4 +89,4 @@
         </span>
       </p>
     </section>
-  </section>
+  </article>
