--- a/app/views/pages/how_to_new.html.erb
+++ b/app/views/pages/how_to_new.html.erb
@@ -15,12 +15,11 @@
 
 
 <h2>RDFa:</h2>
-    <p>Intro:</p>
         <p>RDFa is a extension markup for HTML, with this you can put semantic data in your HTML, static or dynamic, other web sites can reason about it without accessing your database. For instance, search engines use this information to display better search results, with better ranking, and more precise searches. Here is how it might appear for a semantic web site:</p>
         <p><a href="https://support.google.com/webmasters/answer/1408986?hl=en">https://support.google.com/webmasters/answer/1408986?hl=en</a></p>
     
 
-        <p>Most common, and recommended Vocabularies: http://schema.org/, DBPedia, others?</p>
+        <p>Most common, and recommended <a href="/glossary#vocabulary">vocabularies</a>: http://schema.org/, DBPedia, others?</p>
 
     <p>RDFa Tutorial:</p>
         <p>Here we are going to show how <a href="/about">http://od4d.org/about</a> page was made using RDFa markup to describe semantic data.</p>
@@ -50,9 +49,9 @@
         <p>
             The aditional attributes means the following:
             <ul>
-                <li><em>vocab</em>: This resource is going to use the informed vocabulary, all the RDFa inside this resource will be relative to this vocabulary</li>
+                <li><em>vocab</em>: This resource is going to use the informed <a href="/glossary#vocabulary">vocabulary</a>, all the RDFa inside this resource will be relative to this <a href="/glossary#vocabulary">vocabulary</a></li>
                 <li><em>resource</em>: This tag, and all of it's content, describes the "#about" resource. The "#about" resource has the absolute URI: <em><%="#{request.protocol}#{request.host_with_port}/about/#about"%></em>. When referencing resources from other domains, the absolute URI should be used. </li>
-                <li><em>typeof</em>: This resource is of the following type. This type should be from the declared vocabulary.</li>
+                <li><em>typeof</em>: This resource is of the following type. This type should be from the declared <a href="/glossary#vocabulary">vocabulary</a>.</li>
             </ul>
         </p>
 
@@ -85,9 +84,9 @@
 </article>' %></code></pre>
             </p>
 
-        <p>Here we are using the attribute <em>property</em> in some places, this attribute describe what an html tag element represents for it's resource, which is the html tag content, e.g. <em><%=h '<p>THIS CONTENT for example</p>'%></em>, based on pre-defined attributes that some vocabulary specifies. </p> <p>With this enhancements our content is much more described, it's going to be way easier to know what's what when computers access this page. In this specific example, we specified the following properties, from the <a href="http://schema.org/Article">http://schema.org/Article</a> vocabulary: <em>headline, embedUrl, description, articleBody, author</em> </p>
+        <p>Here we are using the attribute <em>property</em> in some places, this attribute describe what an html tag element represents for it's resource, which is the html tag content, e.g. <em><%=h '<p>THIS CONTENT for example</p>'%></em>, based on pre-defined attributes that some <a href="/glossary#vocabulary">vocabulary</a> specifies. </p> <p>With this enhancements our content is much more described, it's going to be way easier to know what's what when computers access this page. In this specific example, we specified the following properties, from the <a href="http://schema.org/Article">http://schema.org/Article</a> <a href="/glossary#vocabulary">vocabulary</a>: <em>headline, embedUrl, description, articleBody, author</em> </p>
 
-        <p>Now, it's also important to pay attention for how an value should be provided for a given property specified in the vocabulary being used. For example dates are interpreted differently by people and computers. For this reason we should present it for the user in a more "human" way, and for computers in a more technical way. To do that, we can use the <em>content</em> property.</p>
+        <p>Now, it's also important to pay attention for how an value should be provided for a given property specified in the <a href="/glossary#vocabulary">vocabulary</a> being used. For example dates are interpreted differently by people and computers. For this reason we should present it for the user in a more "human" way, and for computers in a more technical way. To do that, we can use the <em>content</em> property.</p>
 
         <p>
             <pre><code class="language-markup"><%=h '        .
@@ -100,7 +99,7 @@
 
         <p>As can be seen in the example above, the <em>content</em> attribute in the <em><%=h '"<p property="datePublished" content="2014-05-05T00:00:00+00:00">"'%></em> is different than the actual content provided in <em><%=h '"05/05/2014</p>"'%></em>, even though they represent the same date. With this, when applications and tools come across this html, they will be able to actually understand the date represented, because they are going to use the the attribute <em>content</em> of the tag, which is in the format that they expect it to be, ISO 8061, as specified <a href='http://schema.org/Date'>here</a></p>
 
-        <p> That's it, that's how to markup html with RDFa following some conventions, now let's include a tricky thing here, something that would make our markup ambiguous. Let's say that we want to describe our content with more than one vocabulary, we need to properly represent that in order to computers understand it. First let's do it the way we know so far, just introducing a html tag that already exists, the tag <em>meta</em>. </p> 
+        <p> That's it, that's how to markup html with RDFa following some conventions, now let's include a tricky thing here, something that would make our markup ambiguous. Let's say that we want to describe our content with more than one <a href="/glossary#vocabulary">vocabulary</a>, we need to properly represent that in order to computers understand it. First let's do it the way we know so far, just introducing a html tag that already exists, the tag <em>meta</em>. </p> 
 
         <p>
             <pre><code class="language-markup"><%=h '<article vocab="http://schema.org" resource="#about" typeof="Article">
@@ -113,9 +112,9 @@
 </section>'%></code></pre>
         </p>
 
-        <p>Here a new vocabulary was used to describe our content, the <a href="http://ogp.me/ns#">http://ogp.me/ns#</a> vocabulary, which is the Open Graph Protocol that Facebook created. Here we are using it to show that many vocabularies can be used to describe content semantically. Even though, one may use as many vocabularies as he/she wants, choosing very well defined onthologies, will help minimize the amount of vocabularies needed.</p>
+        <p>Here a new <a href="/glossary#vocabulary">vocabulary</a> was used to describe our content, the <a href="http://ogp.me/ns#">http://ogp.me/ns#</a> <a href="/glossary#vocabulary">vocabulary</a>, which is the Open Graph Protocol that Facebook created. Here we are using it to show that many <a href="/glossary#vocabulary">vocabularies</a> can be used to describe content semantically. Even though, one may use as many <a href="/glossary#vocabulary">vocabularies</a> as he/she wants, choosing very well defined <a href="/glossary#onthology">onthologies</a>, will help minimize the amount of <a href="/glossary#vocabulary">vocabularies</a> needed.</p>
 
-        <p> Another important thing to note here, there is a little thing to fix. We are defining our video, with "http://ogp.me/ns" vocabulary, but it is also inside of a resource said to be using "http://schema.org" vocabulary, this is an ambiguity, RDFa does not allow it unless just one resource is being defined inside another. So let's fix it using <em>namespaces</em> or <em>aliases</em> with the attribute prefix specified by RDFa. Here's how to declare them:</p>
+        <p> Another important thing to note here, there is a little thing to fix. We are defining our video, with "http://ogp.me/ns" <a href="/glossary#vocabulary">vocabulary</a>, but it is also inside of a resource said to be using "http://schema.org" <a href="/glossary#vocabulary">vocabulary</a>, this is an ambiguity, RDFa does not allow it unless just one resource is being defined inside another. So let's fix it using <em>namespaces</em> or <em>aliases</em> with the attribute prefix specified by RDFa. Here's how to declare them:</p>
         <p>
             <pre><code class="language-markup"><%=h '<html xmlns="http://www.w3.org/1999/xhtml"> 
 <head>...</head>
@@ -123,7 +122,7 @@
               og: http://ogp.me/ns#">'%></code></pre>
         </p>
 
-        <p>And here's the entire code, using the aliases/namespaces to use properties and types of some vocabulary:</p>
+        <p>And here's the entire code, using the aliases/namespaces to use properties and types of some <a href="/glossary#vocabulary">vocabulary</a>:</p>
 
         <p>
            <pre><code class="language-markup"> <%=h '<html xmlns="http://www.w3.org/1999/xhtml"> 
@@ -158,21 +157,13 @@
   </body>
   </html>'%></code></pre></p>
         <p>
-            The example above is the final version of a semantic html, for the two resources that we were trying to describe semantically. The <em>prefix</em> is used to to create namespaces, or aliases for the vocabulary URI, to be easier to use it. We use the <em>prefix</em> attribute in the main html element for content, the <em>body</em>, this because we wanted to describe resources only in the content part of the website. But the <em>prefix</em> tag could be also used in the <em>html</em> tag, to markup semantic data in the <em>head</em> section of the page. Here two aliases were created, the <em>schema</em> and the <em>og</em> for the <em>http://schema.org, http://ogp.me/ns#</em> vocabularies respectivelly. Every type and property that we use further down the html code, is prefixed with it's respective alias/namespace, like this, there is no ambiguity, and also just by rapidily looking into it, we know from which vocabulary the types and properties are from.
+            The example above is the final version of a semantic html, for the two resources that we were trying to describe semantically. The <em>prefix</em> is used to to create namespaces, or aliases for the <a href="/glossary#vocabulary">vocabulary</a> URI, to be easier to use it. We use the <em>prefix</em> attribute in the main html element for content, the <em>body</em>, this because we wanted to describe resources only in the content part of the website. But the <em>prefix</em> tag could be also used in the <em>html</em> tag, to markup semantic data in the <em>head</em> section of the page. Here two aliases were created, the <em>schema</em> and the <em>og</em> for the <em>http://schema.org, http://ogp.me/ns#</em> <a href="/glossary#vocabulary">vocabularies</a> respectivelly. Every type and property that we use further down the html code, is prefixed with it's respective alias/namespace, like this, there is no ambiguity, and also just by rapidily looking into it, we know from which <a href="/glossary#vocabulary">vocabulary</a> the types and properties are from.
         </p>
-
-    <p>Vocabularies:</p>
-        <p>Vocabularies are predefined terms for different Objects in certain subject areas, with this predefined vocabularies, applications/tools/other web sites that makes use of this data can better understand it when common and popular vocabularies are used.</p>
-
-    <p>Onthologies:</p>
-        <p>Onthologies are a set of vocabularies that are able to describe an subject area. For instance an Onthology of Intelectual property, might include vocabularies to describe any form of text, media, etc. Article, Video, Audio, are examples of vocabularies that could be inside a Onthology called "Intelectual Property Onthology".</p>
-
-        
-
-<p>References:</p>
-<ul>
-<li><a href="http://www.w3.org/standards/semanticweb/">W3C Semantic Web Standards</a></li>
-<li><a href="http://rdfa.info/">RDFa Playground</a></li>
-<li><a href="https://support.google.com/webmasters/answer/146898?hl=en">Google RDFa Support</a></li>
-<li><a href="https://support.google.com/webmasters/answer/1408986?hl=en">Google Microdata Support</a></li>
+        <p>References:</p>
+        <ul>
+            <li><a href="http://www.w3.org/standards/semanticweb/">W3C Semantic Web Standards</a></li>
+            <li><a href="http://rdfa.info/">RDFa Playground</a></li>
+            <li><a href="https://support.google.com/webmasters/answer/146898?hl=en">Google RDFa Support</a></li>
+            <li><a href="https://support.google.com/webmasters/answer/1408986?hl=en">Google Microdata Support</a></li>
+        </ul>
 </article>
